--- a/public/send.html
+++ b/public/send.html
@@ -63,7 +63,7 @@
                     <div class="field">
                       <label class="label">Enter recipient mobile number</label>
                       <div class="control">
-                        <input class="input phoneNo" type="text" placeholder="+44777648271" required />
+                        <input class="input phoneNo" type="text" placeholder="447804521377" required />
                       </div>
                     </div>
                     <div class="buttons">
